--- a/src/main/js/package.json
+++ b/src/main/js/package.json
@@ -12,6 +12,7 @@
   "homepage": "./",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "apollo-boost": "^0.4.9",
